# laser-star

./: .projections.json  CMakeLists.txt  README.md  bench.sh  cb_skolem_run.sh  cbrun.sh  correctness.sh  debug.sh  main.cpp  out.txt  result_0224.txt  sample.sh  simpleapp.sh  star.sh
extra/: bench_conjunction.sh  conjunction_2.star  conjunction_2_d_w32.star  conjunction_4_d_w32.star  conjunction_4n.star  problem_w08.star  problem_w16.star  problem_w32.star  problem_w64.star
include/: simple_io_manager.h  simple_parser.h  simple_reader.h  simple_rule_reader.h  simple_writer.h
results/: conjunction_2n.star  conjunction_3.star  conjunction_3_d_w32.star  conjunction_4.star  conjunction_d2.star  deep100_s20.txt  jan29_bench.txt  jan30_bench0.txt  old2_deep100_s20.txt  old_deep100_s100.txt  old_deep100_s20.txt  old_no_window.txt  old_results.txt  out_facts.txt  out_perf.txt  star_deep100.txt  vs_vlog.txt  vs_vlog_3.txt
samples/: bicycle.stream  simple.stream  steam_generator.stream
scripts/: all_gen.sh  all_gen_bench.sh  cbconvert.sh  cbparse.py  convert_chasebench.sh  gen.py  gen_bench.py
src/: simple_io_manager.cpp  simple_parser.cpp  simple_reader.cpp  simple_rule_reader.cpp  simple_writer.cpp
